[package]
name = "m5_core2"
version = "0.1.0"
authors = ["AviiNL <me@avii.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = "0.5.0"

esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-backtrace = { version = "0.3.0", features = ["esp32", "panic-handler", "print-uart"] }

xtensa-lx-rt = { version = "0.13.0", features = ["esp32"], optional = true }
esp-println = { version = "0.3.1", features = ["esp32"] }
embedded-hal = "0.2.7"
display-interface-spi = "0.4.1"
mipidsi = { version = "0.5.0" }
embedded-graphics = "0.7.1"
display-interface = "0.4.1"
bitflags = "1.3.2"

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
